tests/type_errors/generic_eq_with_function.nos
# expect_error: does not implement Eq
# Passing function values to a generic function with Eq constraint should be a type error
# Functions don't implement Eq
equal[T: Eq](x: T, y: T) -> Bool = x == y
main() = equal((x) => x, (y) => y)
